<resources>
    <string name="app_name">EazyMarket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="supermercados">Supermercados</string>
    <string name="nome_estabelecimento">Estabelecimento</string>
    <string name="description">Descrição</string>
    <string name="register">Cadastrar</string>
    <string name="product_name">Produto</string>
    <string name="product_description">Descrição</string>
    <string name="product_unit_value">Valor unitário</string>
    <string name="product_code">Código</string>
    <string name="produtost">produtos</string>
    <string name="produtos">produtos</string>
    <string name="SUCCESS_CREATE_SUPERMARKET">Supermercado cadastrado com sucesso!</string>
    <string name="NAME_REQUIRED">nome é requerido</string>
    <string name="DESCRIPTION_REQUIRED">Decrição requerida</string>
    <string name="SUCCESS_UPDATE_SUPERMARKET">Registro atualizado com sucesso</string>
    <string name="REMOVE_ITEM_SUCCESS">Item removido com sucesso!</string>
    <string name="UPDATE">ATUALIZAR</string>
    <string name="SAVE">CADASTRAR</string>
    <string name="finalizar_carrinho">Finalizar</string>
    <string name="real">R$</string>
    <string name="VALUE_UNIT_REQUIRED">Valor unitário requerido</string>
</resources>
