<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterProductFragment">

    <!-- TODO: Update blank fragment layout -->
  <LinearLayout
      android:layout_gravity="center"
      android:padding="30dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/TextInputEditText_product_code"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:hint="@string/product_code"
          app:errorEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/TextInputEditText_product_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:hint="@string/product_name"
          app:errorEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/TextInputEditText_product_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:hint="@string/product_description"
          app:errorEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/TextInputEditText_product_unit_value"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:hint="@string/product_unit_value"
          app:errorEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/btnCreateProduct"
          android:layout_width="match_parent"
          android:layout_height="75dp"
          android:text="@string/register" />

  </LinearLayout>

</FrameLayout>