<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="407dp"
        android:layout_height="128dp"
        android:minHeight="80dp"
        app:cardBackgroundColor="@color/whiteBodyColor"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="364dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNameProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="250dp"
                    android:singleLine="true"
                    android:text="@string/produtos"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/txtDescriptionProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/product_unit_value"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/real"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView_value_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="300,0"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/textButton1"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    app:icon="@drawable/ic_add_circle_outline_black_24dp" />

                <TextView
                    android:id="@+id/texView_quantity_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/textButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:icon="@drawable/ic_remove_circle" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>